[gd_scene load_steps=2 format=3 uid="uid://bxj3fq8aa0t4v"]

[ext_resource type="Script" uid="uid://binm3rsvrqrt4" path="res://UI/TimelineDisplay.gd" id="1_1nr6n"]

[node name="TimelineDisplay" type="CanvasLayer"]
script = ExtResource("1_1nr6n")

[node name="TracksContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1320, 100)
offset_left = 300.0
offset_top = 800.0
offset_right = 340.0
offset_bottom = 840.0

[node name="Track1" type="HBoxContainer" parent="TracksContainer"]
custom_minimum_size = Vector2(1320, 30)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Portrait" type="TextureRect" parent="TracksContainer/Track1"]
layout_mode = 2

[node name="Timeline" type="Control" parent="TracksContainer/Track1"]
custom_minimum_size = Vector2(1250, 30)
layout_mode = 2
size_flags_horizontal = 10

[node name="Track2" type="HBoxContainer" parent="TracksContainer"]
custom_minimum_size = Vector2(1320, 30)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Portrait" type="TextureRect" parent="TracksContainer/Track2"]
layout_mode = 2

[node name="Timeline" type="Control" parent="TracksContainer/Track2"]
custom_minimum_size = Vector2(1250, 30)
layout_mode = 2
size_flags_horizontal = 10

[node name="Track3" type="HBoxContainer" parent="TracksContainer"]
custom_minimum_size = Vector2(1320, 30)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Portrait" type="TextureRect" parent="TracksContainer/Track3"]
layout_mode = 2

[node name="Timeline" type="Control" parent="TracksContainer/Track3"]
custom_minimum_size = Vector2(1250, 30)
layout_mode = 2
size_flags_horizontal = 10

[node name="ConfirmButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 60)
offset_left = 1730.0
offset_top = 531.0
offset_right = 1738.0
offset_bottom = 539.0
text = "确认执行"
